objects/Master_Map__c.object
<CustomObject>
    <description>This object tracks Thailand&apos;s Province, District and Sub District. Being used by Year-end assignment and On-going customer request.</description>
    <fields>
        <fullName>Area_Name__c</fullName>
        <label>Area Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Depend_On_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Depend On Object</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Master Maps</relationshipLabel>
        <relationshipName>Master_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_District__c</fullName>
        <label>Sub District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Master Map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>District__c</columns>
        <columns>Sub_District__c</columns>
        <columns>Type__c</columns>
        <columns>Area_Name__c</columns>
        <columns>Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Districts</fullName>
        <columns>NAME</columns>
        <columns>District__c</columns>
        <columns>Sub_District__c</columns>
        <columns>Type__c</columns>
        <columns>Area_Name__c</columns>
        <columns>Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>District</value>
        </filters>
        <label>Districts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Provinces</fullName>
        <columns>NAME</columns>
        <columns>District__c</columns>
        <columns>Sub_District__c</columns>
        <columns>Type__c</columns>
        <columns>Area_Name__c</columns>
        <columns>Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Province</value>
        </filters>
        <label>Provinces</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SubDistricts</fullName>
        <columns>NAME</columns>
        <columns>Sub_District__c</columns>
        <columns>District__c</columns>
        <columns>Type__c</columns>
        <columns>Area_Name__c</columns>
        <columns>Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Sub District</value>
        </filters>
        <label>Sub Districts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Province Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Maps</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>